# Moodify

backend/: .cache  .gitignore  README.md  pyproject.toml
backend/app/: main.py  models.py
backend/app/routes/: media.py  recommendations.py
backend/app/services/: media_ai_service.py  openai_service.py  spotify_service.py  tmdb_service.py
frontend/: package-lock.json  tsconfig.app.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/components/: LoadingSpinner.tsx  MoodInput.tsx  TrackCard.tsx  TrackList.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
